[gd_scene load_steps=3 format=3 uid="uid://bbak2jlx6h5b"]

[ext_resource type="Script" path="res://SCRIPTS/bar_slot.gd" id="1_0n78o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktwvs"]
size = Vector2(52, 32)

[node name="BarSlot" type="Node2D"]
script = ExtResource("1_0n78o")

[node name="DrinkArea" type="Area2D" parent="."]
position = Vector2(0, 28)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrinkArea"]
z_index = 1
shape = SubResource("RectangleShape2D_ktwvs")

[connection signal="body_entered" from="DrinkArea" to="." method="_on_drink_area_body_entered"]
[connection signal="body_exited" from="DrinkArea" to="." method="_on_drink_area_body_exited"]
